# Tournoix

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml  main.yml  rust-db.yml  test.sql  test.yml  tests.yml
backend/: .env.example  .env.test  .gitignore  Cargo.toml  Rocket.toml  Rocket.toml.example
backend/migrations/2023-08-28-085105_create_user/: up.sql
backend/migrations/2023-08-28-092404_create_tournament/: down.sql  up.sql
backend/migrations/2023-08-28-092405_create_subscriber/: up.sql
backend/migrations/2023-08-28-092405_create_subscrption/: up.sql
backend/migrations/2023-08-28-092420_create_team/: up.sql
backend/migrations/2023-08-28-092425_create_game/: up.sql
backend/migrations/2023-08-28-092425_create_match/: down.sql  up.sql
backend/migrations/2023-08-28-092438_create_nut/: down.sql  up.sql
backend/migrations/2023-08-28-092442_create_bet/: down.sql  up.sql
backend/migrations/2023-08-29-074038_tokens/: down.sql  up.sql
backend/migrations/2023-09-07-210050_add_is_closed_tournament/: down.sql  up.sql
backend/src/: crypto.rs  database.rs  main.rs  models.rs  schema.rs
backend/src/models/: bet.rs  game.rs  mod.rs  nut.rs  subscriber.rs  subscription.rs  team.rs  token.rs  tournament.rs  user.rs
backend/src/routes/: auth.rs  bet.rs  game.rs  mod.rs  nut.rs  subscription.rs  team.rs  tournoix.rs  users.rs
backend/src/tests/: api.rs
src/: main.rs
ui/: .env.example  .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  style.scss  tailwind.config.js
ui/src/: main.rs  routers.rs
ui/src/api/: auth.rs  bets.rs  game.rs  games.rs  mod.rs  models.rs  teams.rs  tournoix.rs
ui/src/components/: backlink.rs  bet_list.rs  bracket.rs  bracket_match.rs  bracket_round.rs  button.rs  checkbox.rs  eliminationPhase.rs  form_input.rs  group_drop.rs  groups.rs  join_code.rs  loading_circle.rs  mod.rs  notification.rs  qualif_game.rs  qualificationPhase.rs  qualification_phase.rs  results.rs  team_bet.rs  team_card.rs  team_drag.rs  team_no_drag.rs  teams.rs  tournament_card.rs  tournament_create_button.rs  tournaments.rs  user_provider.rs
ui/src/layouts/: homelayout.rs  mod.rs
ui/src/notification/: component.rs  mod.rs
ui/src/pages/: games_view.rs  home.rs  join.rs  login.rs  mod.rs  register.rs  tournoix.rs  tournoix_create.rs  tournoix_create_old.rs  tournoix_edit.rs  tournoix_view.rs
ui/src/utils/: utils.rs
