[package]
name = "tournoix-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = ["mysql", "chrono"] }
serde = "1.0.147"
chrono = {version = "0.4.23", features=["serde"]}

[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.3"
features = ["diesel_mysql_pool"]