[package]
name = "tournoix-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
dotenv = "0.15.0"
serde = "1.0.188"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.1.0", features = ["mysql", "chrono"] }
rand = "0.8.5"
rust-argon2 = "2.0.0"

[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.3"
features = ["diesel_mysql_pool"]
