[package]
name = "tournoix-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
dotenv = "0.15.0"
serde = "1.0.188"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.1.0", features = ["mysql", "chrono"] }
rust-argon2 = "1.0"
rand = "0.8.5"

[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.3"
features = ["diesel_mysql_pool"]

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
