[package]
name = "tournoix-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-hooks = "0.2.0"
web-sys = "0.3"
dotenv = "0.15.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
reqwest = {version = "0.11.20", features = ["blocking", "json"]}
dotenv_codegen = "0.15.0"
serde = "1.0.188"
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde"] }
