[package]
name = "tournoix-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-hooks = "0.2.0"
web-sys = { version = "0.3", features=["DomRect", "DomRectList", "DomTokenList"] }
dotenv = "0.15.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
reqwest = {version = "0.11.20", features = ["blocking", "json"]}
dotenv_codegen = "0.15.0"
serde = "1.0.188"
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde"] }
wasm-bindgen = "0.2.87"
console_log = "1.0.0"
log = "0.4.20"
gloo-dialogs = "0.2.0"
futures = "0.3.1"
wasm-bindgen-futures = "0.4.37"
colorsys = "0.6.7"
js-sys = "0.3.64"
